fixed buttons not centered in Firefox

--- a/styles.css
+++ b/styles.css
@@ -672,7 +672,10 @@ html {
 #btn-container {
     width: fit-content;
     height: 100px;
-    margin: auto;
+    /* margin: auto; */
+    margin-left: auto;
+    margin-right: auto;
+    width: -moz-fit-content;
 }
 
 #btn-add-new {
